# arxiv-bot

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  setting.toml
migrations/2020-04-10-180521_create_arxiv_papers/: down.sql  up.sql
migrations/2020-05-01-122314_add-slack-notified-column/: down.sql  up.sql
migrations/2020-05-27-133321_drop-slack-column/: down.sql  up.sql
migrations/2020-05-27-133735_add-slack-notify-table/: down.sql  up.sql
src/: db.rs  domain.rs  infrastructure.rs  load_setting.rs  main.rs  usecase.rs
src/db/: models.rs  schema.rs
src/domain/: arxiv_api.rs  arxiv_paper.rs  slack_api.rs  slack_notification.rs
src/infrastructure/: arxiv_api.rs  arxiv_paper.rs  slack_api.rs  slack_notifications.rs  sqlite.rs
src/infrastructure/slack_api/: block.rs
src/usecase/: arxiv_api.rs  arxiv_paper.rs  slack_api.rs  slack_notifications.rs
