[package]
name = "arxiv-bot"
version = "0.1.0"
authors = ["Nkriskeeic <kreski.linux.sea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "^1.4.4", default-features = false, features = ["sqlite",  "chrono", "serde_json"] }
chrono = "^0.4.11"
reqwest = { version="^0.10.4", features=["blocking", "json"]}
failure = "^0.1.7"
dotenv = "^0.15.0"
serde = {version = "^1.0.106", features=["derive"]}
serde_json = "1.0"
tokio = { version = "^0.2.18", features=["macros"]}
quick-xml = { version = "^0.18.1", features=["serialize"]}
regex = "^1.3.7"
structopt = "^0.3.14"
percent-encoding = "^2.1.0"
toml = "^0.5.6"

[dev-dependencies]
diesel_migrations = "1.1.0"
